--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "tech-blog/themes/hugo-theme-codex"]
-	path = tech-blog/themes/hugo-theme-codex
+[submodule "themes/hugo-theme-codex"]
+	path = themes/hugo-theme-codex
 	url = https://github.com/jakewies/hugo-theme-codex.git
