--- a/config.yaml
+++ b/config.yaml
@@ -12,7 +12,6 @@ permalinks:
 
 paginate: 10
 
-# googleAnalytics: your-google-analytics-id
 # disqusShortname: your-disqus-shortname
 
 # Hugo Configure Markup
@@ -52,11 +51,11 @@ params:
   ###########################################
 
   # To enable RSS, you could set `enableRSS: true`, default is `true`
-  enableRSS: true
+  enableRSS: false
   # To enable comments, you may need to set `disqusShortname`
   enableComments: true
   # To enable comments, you may need to set `googleAnalytics`
-  enableGoogleAnalytics: true
+  enableGoogleAnalytics: false
   # To enable table of content, you could set `showToc: true`, default is `false`
   showToc: true
   # To hidden powerBy message in the page footer, you could set: `showPowerBy: false`, default is `true`
