--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -50,7 +50,7 @@ talksGroupByDate = "2006" # "2006-01": group by month, "2006": group by year
 myname = "Shintaro Oba"
 email = "mr.shintaro3@gmail.com"
 whoami = "Software Engineer"
-bioImageUrl = "images/avatar.png" # image url like "http//..." or "images/anyfoldername/mybioimage.jpg" If not set, we find a avatar image in root/static/images/whoami/avatar.(png|jpg|svg)
+bioImageUrl = "https://github.com/ShintaroOba/techlog/blob/main/images/avatar.png" # image url like "http//..." or "images/anyfoldername/mybioimage.jpg" If not set, we find a avatar image in root/static/images/whoami/avatar.(png|jpg|svg)
 useGravatar = false # we use this option highest priority
 location = "Tokyo / Japan"
 organization = ""
