--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -150,7 +150,7 @@ commento = false
   youtube = ""
   medium = ""
   tumblr = ""
-  linkedin = "www.linkedin.com/in/shintaro-oba"
+  linkedin = "https://www.linkedin.com/in/shintaro-oba/"
   pinterest = ""
   stack-exchange = ""
   telegram = ""
