add hatebu bookmark

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -188,3 +188,6 @@ commento = false
 # possible share name: "facebook","twitter", "reddit", "linkedin", "tumblr", "weibo", "douban", "line", "whatsapp", "telegram"
 [[share]]
   name = "twitter"
+
+[[share]]
+name = "hatebu"
